welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:16: error: expected class or object definition
def faireV() {
^PictureMono2:34: error: expected class or object definition
def faireMotif() {
^PictureMono2:40: error: Unmatched closing brace '}' ignored here
}
^