welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
  for(cpt1<-1 to 3) {}
  	faireMotif()
  	avance(5)
 	  faireMotif()
    avance(5)
    faireMotif()
 	  avance(4)
	  recule(21)
  	gauche()
 	  avance(7)
    droite()
  }
}

def faireV() {
  avance(2)
  baisseBrosse()
  leveBrosse()  
  avance()  
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance(2)
  gauche()
}

def faireMotif() {
  for(cpt<-1 to 4) {
    faireV()
  }
}